--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="base.css" />
     <title>Zhifan Gao</title>
-    <!-- <base href="https://zhifan-gao.github.io/index.html"> -->
-    <base href="./index.html">
+    <base href="https://zhifan-gao.github.io/index.html">
+<!--     <base href="./index.html"> -->
 
 </head>
 
