--- a/publications.html
+++ b/publications.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="base.css" />
     <link rel="stylesheet" type="text/css" href="publication.css" />
     <title>Zhifan Gao</title>
-    <!-- <base href="https://zhifan-gao.github.io/publications.html"> -->
-    <base href="./publications.html">
+    <base href="https://zhifan-gao.github.io/publications.html">
+<!--     <base href="./publications.html"> -->
     <style type="text/css"> 
     .left {
         display:inline;  
