--- a/research.html
+++ b/research.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="base.css" />
     <link rel="stylesheet" type="text/css" href="research.css" />
     <title>Zhifan Gao</title>
-    <!-- <base href="https://zhifan-gao.github.io/contact.html"> -->
-    <base href="./research.html">
+    <base href="https://zhifan-gao.github.io/contact.html">
+<!--     <base href="./research.html"> -->
 </head>
 
 <body>
