--- a/service.html
+++ b/service.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="base.css" />
     <link rel="stylesheet" type="text/css" href="service.css" />
     <title>Zhifan Gao</title>
-    <!-- <base href="https://zhifan-gao.github.io/service.html"> -->
-    <base href="./service.html">
+    <base href="https://zhifan-gao.github.io/service.html">
+<!--     <base href="./service.html"> -->
 </head>
 
 <body>
