--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- <h1 style="margin-top: 0em">Home</h1><br> -->
 
     <table class="imgtable"><tr valign="middle">
-        <td><img src="./imgs/profile.jpg" alt="Zhifan Gao" border="0" width=130/></td>
+        <td><img src="./imgs/profile.png" alt="Zhifan Gao" border="0" width=130/></td>
         <td align="left">
             <br>
             <p><span style="font-size: 110%"><b>Zhifan Gao</b></span></p>
