--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <div>
         <h2><hr><a name="news"></a>News</h2>
         <ul>
+          <li><p> 11/2019, a paper on learning physical properties of blood flow dynamics accepted to Neural Networks.
           <li><p> 11/2019, a paper on intracoronary vessel border detection accepted to IEEE TMI.
           <li><p> 09/2019, a paper on salient object detection accepted to IEEE Network.
           <li><p> 09/2019, I won the <a target="_blank" href="https://publons.com/awards/peer-review/2019/?utm_source=PRW19+winners&utm_campaign=ce9968c289-EMAIL_CAMPAIGN_2019_09_16_08_44&utm_medium=email&utm_term=0_d89c6b3e8d-ce9968c289-157252681">Global Top Peer Reviewer Award</a> endorsed by Publons (Top 1%). 
