--- a/publications.html
+++ b/publications.html
@@ -34,6 +34,12 @@
 
         <ul>
             <li><p>
+            <b>Learning Physical Properties in Complex Visual Scenes: An Intelligent Machine for Perceiving Blood Flow Dynamics from Static CT Angiography Imaging.</b> <br>
+            <b>Zhifan Gao</b>, Xin Wang, Shanhui Sun, Dan Wu, Junjie Bai, Youbing Yin, Xin Liu, Heye Zhang, and Victor Hugo C de Albuquerque. <br>
+            <i>Neural Networks</i>, 2019. (Accepted)
+            </p></li>
+            
+            <li><p>
             <b>Salient Object Detection in the Distributed Cloud-Edge Intelligent Network.</b> <br>
             <b>Zhifan Gao</b>, Heye Zhang, Shizhou Dong, Shanhui Sun, Xin Wang, Guang Yang, Wanqing Wu, Shuo Li, and Victor Hugo C. de Albuquerque. <br>
             <i>IEEE Network</i>, 2019. (Accepted)
@@ -170,7 +176,7 @@
         <ul>
             <li><p>
             <b>Robust Estimation of Carotid Artery Wall Motion Using the Elasticity-Based State-Space Approach.</b> [<a href="https://doi.org/10.1016/j.media.2017.01.004" class=link>Link</a>] <br> 
-            <i>Zhifan Gao</i>, Huahua Xiong, Xin Liu, Heye Zhang, Dhanjoo Ghista, Wanqing Wu, and Shuo Li. <br>
+            <b>Zhifan Gao</b>, Huahua Xiong, Xin Liu, Heye Zhang, Dhanjoo Ghista, Wanqing Wu, and Shuo Li. <br>
             <i>Medical Image Analysis</i> 37:1-21, 2017.
             </p></li>
 
