--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <li><p> 07/2019, a paper on learning-based quasi-static ultrasound elastography accepted to Medical Image Analysis.
           <li><p> 06/2019, a paper on multi-modal intraocoronary image segmentation accepted to <a target="_blank" href="https://www.miccai2019.org/">MICCAI 2019</a> (early acceptance) </a></p></li> 
            <!-- * 06/2019, I accepted the invitation to serve as a PC member for ISAIR 2020. -->
-          <li><p> 11/2018. our three papers have been featured as ESI Highly Cited Paper. (Top 1% citations in Web of Science)
+          <li><p> 11/2018. our three papers have been featured as ESI Highly Cited Paper.
           <li><p> 07/2018, two papers accepted to <a target="_blank" href="http://bmvc2018.org/">BMVC 2018</a>.
           <li><p> 05/2018, two papers accepted to <a target="_blank" href="https://www.miccai2018.org/en/">MICCAI 2018</a>.
           <li><p> 06/2018, I started working at the Western University as a postdoctoral fellow.
@@ -76,7 +76,7 @@
           <li><p> 11/2017, a paper on carotid artery segmenation accepted to IEEE JBHI.
           <li><p> 06/2017, I began to server as a reviewer of MICCAI. 
           <li><p> 05/2017, a paper on direct detection of mocardial infarction accepted to <a target="_blank" href="https://www.miccai2017.org/">MICCAI 2017</a>.
-          <li><p> 05/2017, I won the Special Prize of President Scholarship for Postgraduate Students awarded by Chinese Academy of Sciences (CAS). This is the highest award in CAS for postgraduate students. 
+          <li><p> 05/2017, I won the Special Prize of President Scholarship for Postgraduate Students awarded by Chinese Academy of Sciences (CAS).
           <li><p> 06/2016, I won the Student Travel Award of MICCAI 2016.
           <li><p> 04/2016, a paper accepted to <a target="_blank" href="http://www.miccai2016.org/en/">MICCAI 2016</a>.
           <li><p> 06/2015, I won the Student Travel Award of MICCAI 2015.
