--- a/publications.html
+++ b/publications.html
@@ -34,7 +34,7 @@
 
         <ul>
             <li><p>
-            <b>Learning Physical Properties in Complex Visual Scenes: An Intelligent Machine for Perceiving Blood Flow Dynamics from Static CT Angiography Imaging.</b> <br>
+            <b>Learning Physical Properties in Complex Visual Scenes: An Intelligent Machine for Perceiving Blood Flow Dynamics from Static CT Angiography Imaging.</b> [<a href="https://doi.org/10.1016/j.neunet.2019.11.017" class=link>Link</a>]<br>
             <b>Zhifan Gao</b>, Xin Wang, Shanhui Sun, Dan Wu, Junjie Bai, Youbing Yin, Xin Liu, Heye Zhang, and Victor Hugo C de Albuquerque. <br>
             <i>Neural Networks</i>, 2019. (Accepted)
             </p></li>
