--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div>
         <h2><hr><a name="news"></a>News</h2>
         <ul>
-          <li><p> 12/2019, a paper on learning physical properties of blood flow dynamics accepted to IEEE IoT Journal.
+          <li><p> 12/2019, a paper on learning physical properties of blood flow dynamics accepted to IEEE IoT.
           <li><p> 11/2019, a paper on learning physical properties of blood flow dynamics accepted to Neural Networks.
           <li><p> 11/2019, a paper on intracoronary vessel border detection accepted to IEEE TMI.
           <li><p> 09/2019, a paper on salient object detection accepted to IEEE Network.
