--- a/publications.html
+++ b/publications.html
@@ -34,6 +34,12 @@
 
         <ul>
             <li><p>
+            <b>Trustful Internet of Surveillance Things Based on Deeply-Represented Visual Co-Saliency Detection.</b> [<a href="https://doi.org/10.1109/JIOT.2019.2963701" class=link>Link</a>]<br>
+            <b>Zhifan Gao</b>, Chenchu Xu, Heye Zhang, Shuo Li, and Victor Hugo C de Albuquerque. <br>
+            <i>IEEE Internet of Things Journal</i>, 2019. (Accepted)
+            </p></li>
+            
+            <li><p>
             <b>Learning Physical Properties in Complex Visual Scenes: An Intelligent Machine for Perceiving Blood Flow Dynamics</b><br>
             <b>from Static CT Angiography Imaging.</b> [<a href="https://doi.org/10.1016/j.neunet.2019.11.017" class=link>Link</a>]<br>
             <b>Zhifan Gao</b>, Xin Wang, Shanhui Sun, Dan Wu, Junjie Bai, Youbing Yin, Xin Liu, Heye Zhang, and Victor Hugo C de Albuquerque. <br>
