--- a/publications.html
+++ b/publications.html
@@ -77,7 +77,7 @@
             </p></li>
 
             <li><p>
-            <b>IoT-based 3D convolution for video salient object detection.</b> [<a href="https://doi.org/10.1007/s00521-018-03971-3" class=link>Link</a>] <br> 
+            <b>IoT-based 3D Convolution for Video Salient Object Detection.</b> [<a href="https://doi.org/10.1007/s00521-018-03971-3" class=link>Link</a>] <br> 
             Shizhou Dong, <b>Zhifan Gao</b>, Sandeep Pirbhulal, Gui-Bin Bian, Heye Zhang, Wanqing Wu, and Shuo Li. <br>
             <i>Neural Computing and Applications</i> 37(1):273-283, 2019.
             </p></li>
