--- a/publications.html
+++ b/publications.html
@@ -34,6 +34,12 @@
 
         <ul>
             <li><p>
+            <b>Unified Model for Interpreting Multi-View Echocardiographic Sequences Without Temporal Information.</b> [<a href="https://doi.org/10.1016/j.asoc.2019.106049" class=link>Link</a>] <br> 
+            Ming Li, Shizhou Dong, <b>Zhifan Gao</b>, Cheng Feng, Huahua Xiong, Wei Zheng, Dhanjoo Ghista, HeyeZhang, and Victor Hugo C.de Albuquerque. <br>
+            <i>Applied Soft Computing</i>, 2020. (Accepted)
+            </p></li>
+            
+            <li><p>
             <b>Trustful Internet of Surveillance Things Based on Deeply-Represented Visual Co-Saliency Detection.</b> [<a href="https://doi.org/10.1109/JIOT.2019.2963701" class=link>Link</a>]<br>
             <b>Zhifan Gao</b>, Chenchu Xu, Heye Zhang, Shuo Li, and Victor Hugo C de Albuquerque. <br>
             <i>IEEE Internet of Things Journal</i>, 2019. (Accepted)
@@ -104,7 +110,7 @@
         <h2><hr><a name="2018"></a>2018</h2>
         <ul>
             <li><p>
-            <b>Motion Tracking of the Carotid Artery Wall from Ultrasound Image Sequences: a Nonlinear State-space Approach.</b> [<a href="https://doi.org/10.1109/TMI.2017.2746879" class=link>Link</a>] <br> 
+            <b>Motion Tracking of the Carotid Artery Wall from Ultrasound Image Sequences: a Nonlinear State-Space Approach.</b> [<a href="https://doi.org/10.1109/TMI.2017.2746879" class=link>Link</a>] <br> 
             <b>Zhifan Gao</b>, Yanjie Li, Yuanyuan Sun, Jiayuan Yang, Huahua Xiong, Heye Zhang, Xin Liu, Wanqing Wu, Dong Liang, and Shuo Li. <br>
             <i>IEEE Transactions on Medical Imaging</i> 37(1):273-283, 2018.
             </p></li>
