--- a/publications.html
+++ b/publications.html
@@ -27,18 +27,24 @@
 </td>
 <td id="layout-content">
     <h1 style="margin-top: 0em">Selected Publications</h1>
-
+    
     <div>
         <h2><hr><a name="2019"></a>2019</h2>
-
-
         <ul>
             <li><p>
             <b>Unified Model for Interpreting Multi-View Echocardiographic Sequences Without Temporal Information.</b> [<a href="https://doi.org/10.1016/j.asoc.2019.106049" class=link>Link</a>] <br> 
             Ming Li, Shizhou Dong, <b>Zhifan Gao</b>, Cheng Feng, Huahua Xiong, Wei Zheng, Dhanjoo Ghista, HeyeZhang, and Victor Hugo C.de Albuquerque. <br>
             <i>Applied Soft Computing</i>, 2020. (Accepted)
             </p></li>
-            
+        </ul>
+    </div>
+
+
+    <div>
+        <h2><hr><a name="2019"></a>2019</h2>
+
+
+        <ul>
             <li><p>
             <b>Trustful Internet of Surveillance Things Based on Deeply-Represented Visual Co-Saliency Detection.</b> [<a href="https://doi.org/10.1109/JIOT.2019.2963701" class=link>Link</a>]<br>
             <b>Zhifan Gao</b>, Chenchu Xu, Heye Zhang, Shuo Li, and Victor Hugo C de Albuquerque. <br>
