--- a/publications.html
+++ b/publications.html
@@ -112,7 +112,7 @@
             <li><p>
             <b>Context-Aware Inductive Bias Learning for Vessel Border Detection in Multi-modal Intracoronary Imaging.</b> [<a href="https://doi.org/10.1007/978-3-030-32245-8_86" class=link>Link</a>] <br> 
             <b>Zhifan Gao</b> and Shuo Li. <br>
-            <i>International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI), 2019.
+            In <i>22nd International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI 2019).
             </p></li>
         </ul>
     </div>
@@ -149,31 +149,31 @@
             <li><p>
             <b>Holistic and Deep Feature Pyramids for Saliency Detection.</b> [<a href="http://bmvc2018.org/contents/papers/0212.pdf" class=link>Link</a>] <br> 
             Shizhou Dong, <b>Zhifan Gao</b>, Shanhui Sun, Xin Wang, Ming Li, Heye Zhang, Guang Yang, Huafeng Liu and Shuo Li. <br>
-            <i>British Machine Vision Conference</i> (BMVC), 2018.
+            In <i>British Machine Vision Conference</i> (BMVC 2018).
             </p></li>
 
             <li><p>
             <b>Deep Learning Intra-Image and Inter-Images Features for Co-Saliency Detection.</b> [<a href="http://bmvc2018.org/contents/papers/1145.pdf" class=link>Link</a>] <br> 
             Min Li, Shizhou Dong, Kun Zhang, <b>Zhifan Gao</b>, Xi Wu, Heye Zhang, Guang Yang, and Shuo Li. <br>
-            <i>British Machine Vision Conference</i> (BMVC), 2018.
+            In <i>British Machine Vision Conference</i> (BMVC 2018).
             </p></li>
 
             <li><p>
             <b>Direct Reconstruction of Ultrasound Elastography Using an End-to-End Deep Neural Network.</b> [<a href="https://doi.org/10.1007/978-3-030-00928-1_43" class=link>Link</a>] <br> 
             Sitong Wu, <b>Zhifan Gao</b>, Zhi Liu, Jianwen Luo, Heye Zhang, and Shuo Li. <br>
-            <i>International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI), 2018.
+            In <i>21nd International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI 2018).
             </p></li>
 
             <li><p>
             <b>Multiview Two-Task Recursive Attention Model for Left Atrium and Atrial Scars Segmentation.</b> [<a href="https://doi.org/10.1007/978-3-030-00934-2_51" class=link>Link</a>] <br> 
             Jun Chen, Guang Yang, <b>Zhifan Gao</b>, Hao Ni, Elsa Angelini, Raad Mohiaddin, Tom Wong, Yanping Zhang, Xiuquan Du, Heye Zhang, Jennifer Keegan, and David Firmin. <br>
-            <i>International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI), 2018.
+            In <i>21nd International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI 2018).
             </p></li>
 
             <li><p>
             <b>Multiview Sequential Learning and Dilated Residual Learning for a Fully Automatic Delineation of the Left Atrium and Pulmonary Veins from Late Gadolinium-Enhanced Cardiac MRI Images.</b> [<a href="https://doi.org/10.1109/EMBC.2018.8512550" class=link>Link</a>] <br> 
             Guang Yang, Jun Chen, <b>Zhifan Gao</b>, Heye Zhang, Hao Ni, Elsa Angelini, Raad Mohiaddin, Tom Wong, Jennifer Keegan, and David Firmin. <br>
-            <i>The 40th Annual International Conference of the IEEE Engineering in Medicine and Biology Society</i> (EMBC), 2018.
+            In <i>40th Annual International Conference of the IEEE Engineering in Medicine and Biology Society</i> (EMBC 2018).
             </p></li>
 
             <li><p>
@@ -215,13 +215,13 @@
             <li><p>
             <b>Direct Detection of Pixel-Level Myocardial Infarction Areas via a Deep-Learning Algorithm.</b> [<a href="https://doi.org/10.1007/978-3-319-66179-7_28" class=link>Link</a>] <br> 
             Chenchu Xu, Lei Xu, <b>Zhifan Gao</b>, Shen Zhao, Heye Zhang, Yanping Zhang, Xiuquan Du, Shu Zhao, Dhanjoo Ghista, Shuo Li. <br>
-            <i>International Conference on Medical Image Computing and Computer Assisted Intervention </i> (MICCAI), 2017.
+            In <i>20th International Conference on Medical Image Computing and Computer Assisted Intervention </i> (MICCAI 2017).
             </p></li>
 
             <li><p>
             <b>Detection of Lumen and Media-Adventitia Borders in IVUS Images Using Sparse Auto-Encoder Neural Network.</b> [<a href="https://doi.org/10.1109/ISBI.2017.7950713" class=link>Link</a>] <br> 
             Shengran Su, <b>Zhifan Gao</b>, Heye Zhang, Qiang Lin, William Kongto Hau, and Shuo Li. <br>
-            <i>IEEE International Symposium on Biomedical Imaging</i>  (ISBI), 2017.    
+            In <i>14th IEEE International Symposium on Biomedical Imaging</i> (ISBI 2017).    
             </p></li>      
         </ul>
     </div>
@@ -232,7 +232,7 @@
             <li><p>
             <b>Carotid Artery Wall Motion Estimated from Ultrasound Imaging Sequences Using a Nonlinear State Space Approach.</b> [<a href="https://doi.org/10.1007/978-3-319-46726-9_12" class=link>Link</a>] <br> 
             <b>Zhifan Gao</b>, Yuanyuan Sun, Heye Zhang, Dhanjoo Ghista, Yanjie Li, Huahua Xiong, Xin Liu, Yaoqin Xie, Wanqing Wu, and Shuo Li. <br>
-            <i>International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI), 2016.
+            In <i>19nd International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI), 2016.
             </p></li> 
 
             <li><p>
@@ -250,7 +250,7 @@
             <li><p>
             <b>Motion Estimation of Common Carotid Artery Wall Using a H<sub>&#8734</sub> Filter Based Block Matching Method.</b> [<a href="https://doi.org/10.1007/978-3-319-24574-4_53" class=link>Link</a>] <br> 
             <b>Zhifan Gao</b>, Huahua Xiong, Heye Zhang, Dan Wu, Minhua Lu, Wanqing Wu, Kelvin K.L. Wong, and Yuan-Ting Zhang. <br>
-            <i>International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI), 2015.
+            In <i>18th International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI), 2015.
             </p></li> 
 
             <li><p>
