--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Zhifan Gao</title>
     <base href="https://zhifan-gao.github.io/index.html">
 <!--     <base href="./index.html"> -->
-
+    <meta name="google-site-verification" content="fTjUAmr1pMFrfxFIpPYoTH8iwD4DV_xyviWpOwPanxU" />
 </head>
 
 <body>
