--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
             </p></li>
             
             <li><p>
-            <b>Salient Object Detection in the Distributed Cloud-Edge Intelligent Network.</b> <br>
+            <b>Salient Object Detection in the Distributed Cloud-Edge Intelligent Network.</b> [<a href="https://doi.org/10.1109/MNET.001.1900260" class=link>Link</a>] <br>
             <b>Zhifan Gao</b>, Heye Zhang, Shizhou Dong, Shanhui Sun, Xin Wang, Guang Yang, Wanqing Wu, Shuo Li, and Victor Hugo C. de Albuquerque. <br>
             <i>IEEE Network</i>
             </p></li>
