--- a/publications.html
+++ b/publications.html
@@ -232,7 +232,7 @@
             <li><p>
             <b>Carotid Artery Wall Motion Estimated from Ultrasound Imaging Sequences Using a Nonlinear State Space Approach.</b> [<a href="https://doi.org/10.1007/978-3-319-46726-9_12" class=link>Link</a>] <br> 
             <b>Zhifan Gao</b>, Yuanyuan Sun, Heye Zhang, Dhanjoo Ghista, Yanjie Li, Huahua Xiong, Xin Liu, Yaoqin Xie, Wanqing Wu, and Shuo Li. <br>
-            In <i>19nd International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI), 2016.
+            In <i>19nd International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI 2016).
             </p></li> 
 
             <li><p>
@@ -250,7 +250,7 @@
             <li><p>
             <b>Motion Estimation of Common Carotid Artery Wall Using a H<sub>&#8734</sub> Filter Based Block Matching Method.</b> [<a href="https://doi.org/10.1007/978-3-319-24574-4_53" class=link>Link</a>] <br> 
             <b>Zhifan Gao</b>, Huahua Xiong, Heye Zhang, Dan Wu, Minhua Lu, Wanqing Wu, Kelvin K.L. Wong, and Yuan-Ting Zhang. <br>
-            In <i>18th International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI), 2015.
+            In <i>18th International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI 2015).
             </p></li> 
 
             <li><p>
