--- a/publications.html
+++ b/publications.html
@@ -39,6 +39,12 @@
         <h2><hr><a name="In Press"></a>In Press</h2>
         <ul>
             <li><p>
+            <b>Simultaneous Left Atrium Anatomy and Scar Segmentations via Deep Learning in Multiview Information with Attention.</b> [<a href="https://doi.org/10.1016/j.asoc.2019.106049" class=link>Link</a>] <br> 
+            Guang Yang, Jun Chen, <b>Zhifan Gao</b>, Shuo Li, Hao Ni, Elsa Angelini, Tom Wong, Raad Mohiaddin, Eva Nyktari, Ricardo Wage, Lei Xu, Yanping Zhang, Xiuquan Du, Heye Zhang, David Firmin, and Jennifer Keegan. <br>
+            <i>Future Generation Computer Systems</i>
+            </p></li>
+            
+            <li><p>
             <b>Unified Model for Interpreting Multi-View Echocardiographic Sequences Without Temporal Information.</b> [<a href="https://doi.org/10.1016/j.asoc.2019.106049" class=link>Link</a>] <br> 
             Ming Li, Shizhou Dong, <b>Zhifan Gao</b>, Cheng Feng, Huahua Xiong, Wei Zheng, Dhanjoo Ghista, Heye Zhang, and Victor Hugo C.de Albuquerque. <br>
             <i>Applied Soft Computing</i>
