--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
         </td>
     </table>
     <p align='justify'>
-    I am a postdoc at the <a href="https://www.uwo.ca/" target="_blank">Schulich School of Medicine & Dentistry, Western University (UWO)</a>, Canada, working with Prof. <a href="http://www.digitalimaginggroup.ca/members/shuo.php/" target="_blank">Shuo Li</a>. I obtained my Ph.D. (2017) in Pattern Recognition and Intelligent Systems from <a /href="http://english.ucas.ac.cn/" target="_blank">University of Chinese Academy of Sciences</a>, supervised by Prof. <a \href="http://www.cityu.edu.hk/mbe/yzhan37/" target="_blank">Yuan-Ting Zhang</a> and Prof. <a \href="http://www.escience.cn/people/zhangheye/research.html/" target="_blank">Heye Zhang</a>, and M.Eng. (2011) and B.Sc. (2009) in Electronic and Information Engineering from <a href="http://english.hust.edu.cn/" target="_blank">Huazhong University of Science and Technology</a>, China.
+    I am a postdoc at the <a href="https://www.uwo.ca/" target="_blank">Schulich School of Medicine & Dentistry, 
+    Western University (UWO)</a>, Canada, working with Prof. 
+    <a href="http://www.digitalimaginggroup.ca/members/shuo.php/" target="_blank">Shuo Li</a>. 
+    I obtained the Ph.D. (2017) in Pattern Recognition and Intelligent Systems from 
+    <a /href="http://english.ucas.ac.cn/" target="_blank">University of Chinese Academy of Sciences</a>, 
+    supervised by Prof. <a \href="http://www.cityu.edu.hk/mbe/yzhan37/" target="_blank">Yuan-Ting Zhang</a>, 
+    and M.Eng. (2011) and B.Sc. (2009) in Electronic and Information Engineering from 
+    <a href="http://english.hust.edu.cn/" target="_blank">Huazhong University of Science and Technology</a>, China.
     </p>
 
     <div>
