--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
         <h2><hr><a name="In Press"></a>In Press</h2>
         <ul>
             <li><p>
-            <b>Simultaneous Left Atrium Anatomy and Scar Segmentations via Deep Learning in Multiview Information with Attention.</b> <br> 
+            <b>Simultaneous Left Atrium Anatomy and Scar Segmentations via Deep Learning in Multiview Information with Attention.</b> [<a href="https://doi.org/10.1016/j.future.2020.02.005" class=link>Link</a>]<br> 
             Guang Yang, Jun Chen, <b>Zhifan Gao</b>, Shuo Li, Hao Ni, Elsa Angelini, Tom Wong, Raad Mohiaddin, Eva Nyktari, Ricardo Wage, Lei Xu, Yanping Zhang, Xiuquan Du, Heye Zhang, David Firmin, and Jennifer Keegan. <br>
             <i>Future Generation Computer Systems</i>
             </p></li>
