--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </td>
     </table>
     <p align='justify'>
-    I am a postdoc at the <a href="https://www.uwo.ca/" target="_blank">Schulich School of Medicine & Dentistry, 
+    I will join Sun Yat-sen University in this summer. Currently I am a postdoc at the <a href="https://www.uwo.ca/" target="_blank">Schulich School of Medicine & Dentistry, 
     Western University (UWO)</a>, Canada, working with Prof. 
     <a href="http://www.digitalimaginggroup.ca/members/shuo.php/" target="_blank">Shuo Li</a>. 
     I obtained the Ph.D. (2017) in Pattern Recognition and Intelligent Systems from 
