--- a/publications.html
+++ b/publications.html
@@ -129,7 +129,7 @@
         <h2><hr><a name="2018"></a>2018</h2>
         <ul>
             <li><p>
-            <b>Motion Tracking of the Carotid Artery Wall from Ultrasound Image Sequences: a Nonlinear State-Space Approach.</b> [<a href="https://doi.org/10.1109/TMI.2017.2746879" class=link>Link</a>] <br> 
+            <b>MMMMMMMMMMMMotion Tracking of the Carotid Artery Wall from Ultrasound Image Sequences: a Nonlinear State-Space Approach.</b> [<a href="https://doi.org/10.1109/TMI.2017.2746879" class=link>Link</a>] <br> 
             <b>Zhifan Gao</b>, Yanjie Li, Yuanyuan Sun, Jiayuan Yang, Huahua Xiong, Heye Zhang, Xin Liu, Wanqing Wu, Dong Liang, and Shuo Li. <br>
             <i>IEEE Transactions on Medical Imaging</i> 37(1):273-283, 2018.
             </p></li>
