--- a/publications.html
+++ b/publications.html
@@ -13,6 +13,7 @@
         display:inline;  
     }  
     </style>  
+    <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
 </head>
 
 <body>
@@ -131,7 +132,7 @@
             <li><p>
             <b>Motion Tracking of the Carotid Artery Wall from Ultrasound Image Sequences: a Nonlinear State-Space Approach.</b> [<a href="https://doi.org/10.1109/TMI.2017.2746879" class=link>Link</a>] <br> 
             <b>Zhifan Gao</b>, Yanjie Li, Yuanyuan Sun, Jiayuan Yang, Huahua Xiong, Heye Zhang, Xin Liu, Wanqing Wu, Dong Liang, and Shuo Li. <br>
-            <i>IEEE Transactions on Medical Imaging</i> 37(1):273-283, 2018.  <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
+            <i>IEEE Transactions on Medical Imaging</i> 37(1):273-283, 2018.
             <div data-badge-popover="right" data-badge-type="medium-donut" data-doi="10.1109/TMI.2017.2746879" data-hide-no-mentions="true" class="altmetric-embed"></div>
             </p></li>
             
