--- a/publications.html
+++ b/publications.html
@@ -45,6 +45,8 @@
             <i>Future Generation Computer Systems</i>
             </p></li>
             
+            <div data-badge-popover="right" data-badge-type="medium-donut" data-doi="10.1038/nature.2014.14583" data-hide-no-mentions="true" class="altmetric-embed"></div>
+            
             <li><p>
             <b>Unified Model for Interpreting Multi-View Echocardiographic Sequences Without Temporal Information.</b> [<a href="https://doi.org/10.1016/j.asoc.2019.106049" class=link>Link</a>] <br> 
             Ming Li, Shizhou Dong, <b>Zhifan Gao</b>, Cheng Feng, Huahua Xiong, Wei Zheng, Dhanjoo Ghista, Heye Zhang, and Victor Hugo C.de Albuquerque. <br>
