--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
                 Office: E5-137, 268 Grosvenor Street, London, ON, N6A 4V2, Canada<br>
-                E-mail: <a href="malto:zgao246@uwo.ca">zhifan.gao@outlook.com</a><br>
+                E-mail: <a href="malto:zhifan.gao@outlook.com">zhifan.gao@outlook.com</a><br>
                 <a href="https://scholar.google.com/citations?user=u7ynBDcAAAAJ&hl=en&oi=ao" target="_blank">
                 [Google Scholar]</a>
                 <a href="https://www.researchgate.net/profile/Zhifan_Gao2" target="_blank">[ResearchGate]</a>
