--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         </td>
     </table>
     <p align='justify'>
-    I will join Sun Yat-sen University in this summer. Currently I am a postdoc at the <a href="https://www.uwo.ca/" target="_blank">Schulich School of Medicine & Dentistry, 
+    I will join Sun Yat-sen University in this summer. I was a postdoc at the <a href="https://www.uwo.ca/" target="_blank">Schulich School of Medicine & Dentistry, 
     Western University (UWO)</a>, Canada, working with Prof. 
     <a href="http://www.digitalimaginggroup.ca/members/shuo.php/" target="_blank">Shuo Li</a>. 
-    I obtained the Ph.D. (2017) in Pattern Recognition and Intelligent Systems from 
+    I obtained the Ph.D. in Pattern Recognition and Intelligent Systems from 
     <a /href="http://english.ucas.ac.cn/" target="_blank">University of Chinese Academy of Sciences</a>, 
     supervised by Prof. <a \href="http://www.cityu.edu.hk/mbe/yzhan37/" target="_blank">Yuan-Ting Zhang</a>, 
-    and M.Eng. (2011) and B.Sc. (2009) in Electronic and Information Engineering from 
+    and M.Eng. and B.Sc. in Electronic and Information Engineering from 
     <a href="http://english.hust.edu.cn/" target="_blank">Huazhong University of Science and Technology</a>, China.
     </p>
 
