--- a/publications.html
+++ b/publications.html
@@ -40,8 +40,15 @@
     <div>
         <h2><hr><a name="In Press"></a>In Press</h2>
             <ul>
+	    
+            <li><p>
+            <b>Multi-Task Learning for Estimating Multi-Type Cardiac Indices in MRI and CT Based on Adversarial Reverse Mapping.</b> 
+            <br> 
+            Chengjin Yu, <b>Zhifan Gao</b>, Weiwei Zhang, Guang Yang, Shu Zhao, Heye Zhang, Yanping Zhang, and Shuo Li. <br>
+            <i>IEEE Transactions on Neural Networks and Learning Systems</i>
+            </p></li>
 
- 			<li><p>
+ 	    <li><p>
             <b>Simultaneous Left Atrium Anatomy and Scar Segmentations via Deep Learning in Multiview Information with Attention.</b> [<a href="https://doi.org/10.1016/j.future.2020.02.005" class=link>Link</a>] 
             <span data-badge-popover="right" data-badge-type="" data-doi="10.1016/j.future.2020.02.005" data-hide-no-mentions="true" class="altmetric-embed"></span>
             <br> 
