--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <div>
         <h2><hr><a name="news"></a>News</h2>
         <ul>
+          <li><p> 03/2020, a paper on cardiac index estimation accepted to IEEE TNNLS.
           <li><p> 12/2019, a paper on co-saliency detection accepted to IEEE IoT.
           <li><p> 11/2019, a paper on learning physical properties of blood flow dynamics accepted to Neural Networks.
           <li><p> 11/2019, a paper on intracoronary vessel border detection accepted to IEEE TMI.
