--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
             <ul>
 	    
             <li><p>
-            <b>Multi-Task Learning for Estimating Multi-Type Cardiac Indices in MRI and CT Based on Adversarial Reverse Mapping.</b> 
+            <b>Multi-Task Learning for Estimating Multi-Type Cardiac Indices in MRI and CT Based on Adversarial Reverse Mapping. (Accept)</b> 
             <br> 
             Chengjin Yu, <b>Zhifan Gao</b>, Weiwei Zhang, Guang Yang, Shu Zhao, Heye Zhang, Yanping Zhang, and Shuo Li. <br>
             <i>IEEE Transactions on Neural Networks and Learning Systems</i>
