--- a/publications.html
+++ b/publications.html
@@ -84,15 +84,6 @@
             <b>Zhifan Gao</b>, Xin Wang, Shanhui Sun, Dan Wu, Junjie Bai, Youbing Yin, Xin Liu, Heye Zhang, and Victor Hugo C de Albuquerque. <br>
             <i>Neural Networks</i>
             </p></li>
-            
-            <li><p>
-            <b>Salient Object Detection in the Distributed Cloud-Edge Intelligent Network.</b> [<a href="https://doi.org/10.1109/MNET.001.1900260" class=link>Link</a>] 
-			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1109/MNET.001.1900260" data-hide-no-mentions="true" class="altmetric-embed">
-			</span>
-            <br>
-            <b>Zhifan Gao</b>, Heye Zhang, Shizhou Dong, Shanhui Sun, Xin Wang, Guang Yang, Wanqing Wu, Shuo Li, and Victor Hugo C. de Albuquerque. <br>
-            <i>IEEE Network</i>
-            </p></li>
 
             <li><p>
             <b>Privileged Modality Distillation for Vessel Border Detection in Intracoronary Imaging.</b> [<a href="https://doi.org/10.1109/TMI.2019.2952939" class=link>Link</a>]
@@ -129,6 +120,20 @@
             Xin Liu, Yabin Wang, Heye Zhang, Youbing Yin, Kunlin Cao, <b>Zhifan Gao</b>, Huafeng Liu, William Kongto Hau, Lei Gao, Yundai Chen, Feng Cao, and Wenhua Huang. <br>
             <i>European Radiology</i>
             </p></li>   
+        </ul>
+    </div>
+	
+        <div>
+        <h2><hr><a name="2017"></a>2017</h2>
+        <ul>
+            <li><p>
+            <b>Salient Object Detection in the Distributed Cloud-Edge Intelligent Network.</b> [<a href="https://doi.org/10.1109/MNET.001.1900260" class=link>Link</a>] 
+			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1109/MNET.001.1900260" data-hide-no-mentions="true" class="altmetric-embed">
+			</span>
+            <br>
+            <b>Zhifan Gao</b>, Heye Zhang, Shizhou Dong, Shanhui Sun, Xin Wang, Guang Yang, Wanqing Wu, Shuo Li, and Victor Hugo C. de Albuquerque. <br>
+            <i>IEEE Network</i> 34(2):216-224, 2020.
+            </p></li>
         </ul>
     </div>
 
