--- a/publications.html
+++ b/publications.html
@@ -104,15 +104,6 @@
             </p></li>
 
             <li><p>
-            <b>Deep Learning for Diagnosis of Chronic Myocardial Infarction on Nonenhanced Cardiac Cine MRI.</b> [<a href="https://doi.org/10.1148/radiol.2019182304" class=link>Link</a>] 
-			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1148/radiol.2019182304" data-hide-no-mentions="true" class="altmetric-embed">
-			</span>
-            <br> 
-            Nan Zhang, Guang Yang, <b>Zhifan Gao</b>, Chenchu Xu, Yanping Zhang, Rui Shi, Jennifer Keegan, Lei Xu, Heye Zhang, Zhanming Fan, and David Firmin. <br>
-            <i>Radiology</i>
-            </p></li>
-
-            <li><p>
             <b>Evaluation of Fractional Flow Reserve in Patients with Stable Angina: Can CT Compete with Angiography ?</b> [<a href="https://doi.org/10.1007/s00330-019-06023-z" class=link>Link</a>] 
 			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1007/s00330-019-06023-z" data-hide-no-mentions="true" class="altmetric-embed">
 			</span>
@@ -143,6 +134,16 @@
 
 
         <ul>
+		
+            <li><p>
+            <b>Deep Learning for Diagnosis of Chronic Myocardial Infarction on Nonenhanced Cardiac Cine MRI.</b> [<a href="https://doi.org/10.1148/radiol.2019182304" class=link>Link</a>] 
+			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1148/radiol.2019182304" data-hide-no-mentions="true" class="altmetric-embed">
+			</span>
+            <br> 
+            Nan Zhang, Guang Yang, <b>Zhifan Gao</b>, Chenchu Xu, Yanping Zhang, Rui Shi, Jennifer Keegan, Lei Xu, Heye Zhang, Zhanming Fan, and David Firmin. <br>
+            <i>Radiology</i> 291:606-617, 2019.
+            </p></li>
+		
             <li><p>
             <b>IoT-based 3D Convolution for Video Salient Object Detection.</b> [<a href="https://doi.org/10.1007/s00521-018-03971-3" class=link>Link</a>] 
 			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1007/s00521-018-03971-3" data-hide-no-mentions="true" class="altmetric-embed">
