--- a/publications.html
+++ b/publications.html
@@ -125,6 +125,15 @@
             <b>Zhifan Gao</b>, Heye Zhang, Shizhou Dong, Shanhui Sun, Xin Wang, Guang Yang, Wanqing Wu, Shuo Li, and Victor Hugo C. de Albuquerque. <br>
             <i>IEEE Network</i> 34(2):216-224, 2020.
             </p></li>
+		
+	    <li><p>
+            <b>IoT-based 3D Convolution for Video Salient Object Detection.</b> [<a href="https://doi.org/10.1007/s00521-018-03971-3" class=link>Link</a>] 
+			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1007/s00521-018-03971-3" data-hide-no-mentions="true" class="altmetric-embed">
+			</span>
+            <br> 
+            Shizhou Dong, <b>Zhifan Gao</b>, Sandeep Pirbhulal, Gui-Bin Bian, Heye Zhang, Wanqing Wu, and Shuo Li. <br>
+            <i>Neural Computing and Applications</i> 32:735-746, 2020.
+            </p></li>
         </ul>
     </div>
 
@@ -144,16 +153,6 @@
             <i>Radiology</i> 291:606-617, 2019.
             </p></li>
 		
-            <li><p>
-            <b>IoT-based 3D Convolution for Video Salient Object Detection.</b> [<a href="https://doi.org/10.1007/s00521-018-03971-3" class=link>Link</a>] 
-			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1007/s00521-018-03971-3" data-hide-no-mentions="true" class="altmetric-embed">
-			</span>
-            <br> 
-            Shizhou Dong, <b>Zhifan Gao</b>, Sandeep Pirbhulal, Gui-Bin Bian, Heye Zhang, Wanqing Wu, and Shuo Li. <br>
-            <i>Neural Computing and Applications</i> 37(1):273-283, 2019.
-            </p></li>
-
-
             <li><p>
             <b>Automatic Segmentation of Coronary Tree in CT Angiography Images.</b> [<a href="https://doi.org/10.1002/acs.2762" class=link>Link</a>] 
 			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1002/acs.2762" data-hide-no-mentions="true" class="altmetric-embed">
