--- a/publications.html
+++ b/publications.html
@@ -102,15 +102,7 @@
             <b>Zhifan Gao</b>, Sitong Wu, Zhi Liu, Jianwen Luo, Heye Zhang, Mingming Gong, and Shuo Li. <br>
             <i>Medical Image Analysis</i>
             </p></li>
-
-            <li><p>
-            <b>Evaluation of Fractional Flow Reserve in Patients with Stable Angina: Can CT Compete with Angiography ?</b> [<a href="https://doi.org/10.1007/s00330-019-06023-z" class=link>Link</a>] 
-			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1007/s00330-019-06023-z" data-hide-no-mentions="true" class="altmetric-embed">
-			</span>
-            <br> 
-            Xin Liu, Yabin Wang, Heye Zhang, Youbing Yin, Kunlin Cao, <b>Zhifan Gao</b>, Huafeng Liu, William Kongto Hau, Lei Gao, Yundai Chen, Feng Cao, and Wenhua Huang. <br>
-            <i>European Radiology</i>
-            </p></li>   
+ 
         </ul>
     </div>
 	
@@ -152,6 +144,15 @@
             Nan Zhang, Guang Yang, <b>Zhifan Gao</b>, Chenchu Xu, Yanping Zhang, Rui Shi, Jennifer Keegan, Lei Xu, Heye Zhang, Zhanming Fan, and David Firmin. <br>
             <i>Radiology</i> 291:606-617, 2019.
             </p></li>
+		
+	    <li><p>
+            <b>Evaluation of Fractional Flow Reserve in Patients with Stable Angina: Can CT Compete with Angiography ?</b> [<a href="https://doi.org/10.1007/s00330-019-06023-z" class=link>Link</a>] 
+			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1007/s00330-019-06023-z" data-hide-no-mentions="true" class="altmetric-embed">
+			</span>
+            <br> 
+            Xin Liu, Yabin Wang, Heye Zhang, Youbing Yin, Kunlin Cao, <b>Zhifan Gao</b>, Huafeng Liu, William Kongto Hau, Lei Gao, Yundai Chen, Feng Cao, and Wenhua Huang. <br>
+            <i>European Radiology</i> 29:3669-3677, 2019
+            </p></li>  
 		
             <li><p>
             <b>Automatic Segmentation of Coronary Tree in CT Angiography Images.</b> [<a href="https://doi.org/10.1002/acs.2762" class=link>Link</a>] 
