--- a/publications.html
+++ b/publications.html
@@ -63,7 +63,7 @@
 			</span>
             <br> 
             Ming Li, Shizhou Dong, <b>Zhifan Gao</b>, Cheng Feng, Huahua Xiong, Wei Zheng, Dhanjoo Ghista, Heye Zhang, and Victor Hugo C.de Albuquerque. <br>
-            <i>Applied Soft Computing</i>
+            <i>Applied Soft Computing</i> 88(106049), 2020.
             </p></li>
    
             <li><p>
