--- a/publications.html
+++ b/publications.html
@@ -48,14 +48,6 @@
             <i>IEEE Transactions on Neural Networks and Learning Systems</i>
             </p></li>
 
- 	    <li><p>
-            <b>Simultaneous Left Atrium Anatomy and Scar Segmentations via Deep Learning in Multiview Information with Attention.</b> [<a href="https://doi.org/10.1016/j.future.2020.02.005" class=link>Link</a>] 
-            <span data-badge-popover="right" data-badge-type="" data-doi="10.1016/j.future.2020.02.005" data-hide-no-mentions="true" class="altmetric-embed"></span>
-            <br> 
-            Guang Yang, Jun Chen, <b>Zhifan Gao</b>, Shuo Li, Hao Ni, Elsa Angelini, Tom Wong, Raad Mohiaddin, Eva Nyktari, Ricardo Wage, Lei Xu, Yanping Zhang, Xiuquan Du, Heye Zhang, David Firmin, and Jennifer Keegan. <br>
-            <i>Future Generation Computer Systems</i>
-            </p></li>
-
    
             <li><p>
             <b>Trustful Internet of Surveillance Things Based on Deeply-Represented Visual Co-Saliency Detection.</b> [<a href="https://doi.org/10.1109/JIOT.2019.2963701" class=link>Link</a>]
@@ -107,6 +99,14 @@
             <br>
             <b>Zhifan Gao</b>, Heye Zhang, Shizhou Dong, Shanhui Sun, Xin Wang, Guang Yang, Wanqing Wu, Shuo Li, and Victor Hugo C. de Albuquerque. <br>
             <i>IEEE Network</i> 34(2):216-224, 2020.
+            </p></li>
+	
+	    <li><p>
+            <b>Simultaneous Left Atrium Anatomy and Scar Segmentations via Deep Learning in Multiview Information with Attention.</b> [<a href="https://doi.org/10.1016/j.future.2020.02.005" class=link>Link</a>] 
+            <span data-badge-popover="right" data-badge-type="" data-doi="10.1016/j.future.2020.02.005" data-hide-no-mentions="true" class="altmetric-embed"></span>
+            <br> 
+            Guang Yang, Jun Chen, <b>Zhifan Gao</b>, Shuo Li, Hao Ni, Elsa Angelini, Tom Wong, Raad Mohiaddin, Eva Nyktari, Ricardo Wage, Lei Xu, Yanping Zhang, Xiuquan Du, Heye Zhang, David Firmin, and Jennifer Keegan. <br>
+            <i>Future Generation Computer Systems</i> 107:215-228, 2020.
             </p></li>
 		
 	    <li><p>
