--- a/service.html
+++ b/service.html
@@ -37,6 +37,8 @@
             <li><p> IEEE Transactions on Intelligent Transportation Systems   </p></li>
             <li><p> IEEE Transactions on Industrial Informatics   </p></li>
             <li><p> IEEE Journal of Biomedical and Health Informatics  </p></li>
+            <li><p> IEEE Internet of Things Journal </p></li>
+            <li><p> IEEE Network Magzine <p></li>
             <li><p> IEEE Access </p></li>
             <li><p> Neural Networks </p></li>
             <li><p> Medical Physics </p></li>
