--- a/publications.html
+++ b/publications.html
@@ -69,15 +69,6 @@
             </p></li>
 
             <li><p>
-            <b>Privileged Modality Distillation for Vessel Border Detection in Intracoronary Imaging.</b> [<a href="https://doi.org/10.1109/TMI.2019.2952939" class=link>Link</a>]
-			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1109/TMI.2019.2952939" data-hide-no-mentions="true" class="altmetric-embed">
-			</span>
-            <br>
-            <b>Zhifan Gao</b>, Jonathan Chung, Mohamed Abdelrazek, Stephanie Leung, William Kongto Hau, Zhanchao Xian, Heye Zhang, and Shuo Li. <br>
-            <i>IEEE Transactions on Medical Imaging</i>
-            </p></li>
-
-            <li><p>
             <b>Learning the Implicit Strain Reconstruction in Ultrasound Elastography Using Privileged Information.</b> [<a href="https://doi.org/10.1016/j.media.2019.101534" class=link>Link</a>]
 			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1016/j.media.2019.101534" data-hide-no-mentions="true" class="altmetric-embed">
 			</span>
@@ -92,6 +83,16 @@
         <div>
         <h2><hr><a name="2020"></a>2020</h2>
         <ul>
+            <li><p>
+            <b>Privileged Modality Distillation for Vessel Border Detection in Intracoronary Imaging.</b> [<a href="https://doi.org/10.1109/TMI.2019.2952939" class=link>Link</a>]
+			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1109/TMI.2019.2952939" data-hide-no-mentions="true" class="altmetric-embed">
+			</span>
+            <br>
+            <b>Zhifan Gao</b>, Jonathan Chung, Mohamed Abdelrazek, Stephanie Leung, William Kongto Hau, Zhanchao Xian, Heye Zhang, and Shuo Li. <br>
+            <i>IEEE Transactions on Medical Imaging</i> 39(5):1524-1534, 2020.
+            </p></li>		
+		
+		
             <li><p>
             <b>Salient Object Detection in the Distributed Cloud-Edge Intelligent Network.</b> [<a href="https://doi.org/10.1109/MNET.001.1900260" class=link>Link</a>] 
 			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1109/MNET.001.1900260" data-hide-no-mentions="true" class="altmetric-embed">
